# cs417-exercises

./: fraction_class.ipynb
src-pytest-exercise/: pyproject.toml
src-pytest-exercise/src/timeutils/: dates.py
src-pytest-exercise/tests/: test_dates.py
